src/Envoy/Sample.Gateway/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                generate_request_id: true
                http_filters:
                  - name: envoy.filters.http.router
                route_config:
                  name: routes
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      cors:
                        allow_origin_string_match:
                        - safe_regex:
                            google_re2: {}
                            regex: \*
                        allow_methods: "GET, POST, PUT, DELETE"
                        allow_headers: "authorization, content-type, x-requestid, x-requested-with"
                        allow_credentials: true
                      routes:
                        - name: "aggregator"
                          match:
                            prefix: "/a/"
                          route:
                            prefix_rewrite: "/"
                            cluster: aggregator
                        - name: "serviceone"
                          match:
                            prefix: "/o/"
                          route:
                            prefix_rewrite: "/"
                            cluster: serviceone
                        - name: "servicetwo"
                          match:
                            prefix: "/t/"
                          route:
                            prefix_rewrite: "/"
                            cluster: servicetwo
  clusters:
  - name: aggregator
    connect_timeout: 0.25s
    type: strict_dns
    load_assignment:
        cluster_name: aggregator
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: sample.aggregator                    
                      port_value: 80
  - name: serviceone
    connect_timeout: 0.25s
    type: strict_dns
    load_assignment:
        cluster_name: serviceone
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: sample.serviceone                  
                      port_value: 80
  - name: servicetwo
    connect_timeout: 0.25s
    type: strict_dns
    load_assignment:
        cluster_name: servicetwo
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: sample.servicetwo                 
                      port_value: 80
